--- a/application.conf
+++ b/application.conf
@@ -1,9 +1,23 @@
 akka {
     actor {
+        provider = "akka.remote.RemoteActorRefProvider"
+
         default-dispatcher {
             #executor = "thread-pool-executor"
             mailbox-capacity = 10
             mailbox-push-timeout-time = -1
         }
     }
+
+    remote {
+        transport = "akka.remote.netty.NettyRemoteTransport"
+        netty {
+            hostname = "127.0.0.1"
+            port = 2552
+        }
+    }
+}
+
+genome {
+    storageNodes = ["akka://default@127.0.0.1:2553"]
 }
