--- a/application.conf
+++ b/application.conf
@@ -1,4 +1,6 @@
 akka {
+    extensions = ["com.romix.akka.serialization.kryo.KryoSerializationExtension$"]
+
     actor {
         provider = "akka.remote.RemoteActorRefProvider"
 
@@ -7,6 +9,25 @@ akka {
             mailbox-capacity = 10
             mailbox-push-timeout-time = -1
         }
+
+        kryo  {
+            type = "graph"
+            idstrategy = "default"
+            serializer-pool-size = 32
+            buffer-size = 4096
+        }
+
+        #serializers {
+        #    kryo = "com.romix.akka.serialization.kryo.KryoSerializer"
+        #}
+
+        #serialization-bindings {
+        #    "akka.actor.TypedActor$MethodCall" = kryo
+        #}
+
+        typed {
+            timeout = 1000000000
+        }
     }
 
     remote {
@@ -14,10 +35,14 @@ akka {
         netty {
             hostname = "127.0.0.1"
             port = 2552
+            max-total-memory-size = 64MiB
+            receive-buffer-size = 64MiB
+            send-buffer-size = 64MiB
         }
+        backoff-timeout = 10s
     }
 }
 
 genome {
-    storageNodes = ["akka://default@127.0.0.1:2553"]
+    storageNodes = ["akka://default@127.0.0.1:2553", "akka://default@127.0.0.1:2553", "akka://default@127.0.0.1:2552", "akka://default@127.0.0.1:2552"]
 }
