--- a/application.conf
+++ b/application.conf
@@ -17,13 +17,13 @@ akka {
             buffer-size = 4096
         }
 
-        #serializers {
-        #    kryo = "com.romix.akka.serialization.kryo.KryoSerializer"
-        #}
+        serializers {
+            kryo = "com.romix.akka.serialization.kryo.KryoSerializer"
+        }
 
-        #serialization-bindings {
-        #    "akka.actor.TypedActor$MethodCall" = kryo
-        #}
+        serialization-bindings {
+            "akka.actor.TypedActor$MethodCall" = kryo
+        }
 
         typed {
             timeout = 1000000000
