--- a/config/application.conf
+++ b/config/application.conf
@@ -4,7 +4,7 @@ akka {
     actor {
         provider = "akka.remote.RemoteActorRefProvider"
 
-#        serialize-messages = on
+        serialize-messages = on
 
         default-dispatcher {
             #executor = "thread-pool-executor"
@@ -18,6 +18,7 @@ akka {
             idstrategy = "default"
             serializer-pool-size = 32
             buffer-size = 4096
+            implicit-registration-logging = true
         }
 
         serializers {
@@ -37,14 +38,26 @@ akka {
         transport = "akka.remote.netty.NettyRemoteTransport"
         netty {
             hostname = "127.0.0.1"
-            port = 2553
-            backoff-timeout = 1000s
-            max-total-memory-size = 128MiB
+            port = 2552
+            
         }
     }
 }
 
 genome {
-    storageNodes = ["akka://default@127.0.0.1:2552", "akka://default@127.0.0.1:2552", "akka://default@127.0.0.1:2552", "akka://default@127.0.0.1:2552"]
+    storageNodes = [
+        "akka://default@192.168.0.10:2552",
+        "akka://default@192.168.0.10:2552",
+        "akka://default@192.168.0.9:2552",
+        "akka://default@192.168.0.9:2552",
+        "akka://default@192.168.0.9:2552",
+        "akka://default@192.168.0.9:2552",
+        "akka://default@192.168.0.89:2552",
+        "akka://default@192.168.0.89:2552",
+        "akka://default@192.168.0.86:2552",
+        "akka://default@192.168.0.86:2552",
+    ]
+    inputFile = "data/ecoli"
+    outputFile = "data/graph"
     chunkSize = 64
 }
