--- a/application.conf
+++ b/application.conf
@@ -39,7 +39,8 @@ akka {
             hostname = "127.0.0.1"
             port = 2553
             backoff-timeout = 1000s
-            max-total-memory-size = 128MiB
+            max-channel-memory-size = 10MiB
+            max-total-memory-size = 100MiB
         }
     }
 }
