--- a/application.conf
+++ b/application.conf
@@ -8,16 +8,22 @@ akka {
 
         default-dispatcher {
             #executor = "thread-pool-executor"
-            throughput = 100
-            mailbox-capacity = 100
+            throughput = 500
+            mailbox-capacity = 1000
             mailbox-push-timeout-time = -1
         }
 
         kryo  {
             type = "nograph"
-            idstrategy = "default"
+            idstrategy = "incremental"
             serializer-pool-size = 32
             buffer-size = 4096
+            classes = [
+                "ru.ifmo.genome.dna.Long1DNASeq",
+                "ru.ifmo.genome.ds.Messages$size$",
+                "ru.ifmo.genome.ds.Messages$update1",
+                "ru.ifmo.genome.data.FreqFilter$$anonfun$add$1$1$$anonfun$apply$1",
+            ]
         }
 
         serializers {
@@ -39,13 +45,13 @@ akka {
             hostname = "127.0.0.1"
             port = 2553
             backoff-timeout = 1000s
-            max-channel-memory-size = 10MiB
-            max-total-memory-size = 100MiB
+            #max-channel-memory-size = 10MiB
+            max-total-memory-size = 256MiB
         }
     }
 }
 
 genome {
-    storageNodes = ["akka://default@127.0.0.1:2552", "akka://default@127.0.0.1:2552", "akka://default@127.0.0.1:2552", "akka://default@127.0.0.1:2552"]
+    storageNodes = ["akka://default@127.0.0.1:2553", "akka://default@127.0.0.1:2553", "akka://default@127.0.0.1:2552", "akka://default@127.0.0.1:2552"]
     chunkSize = 64
 }
