--- a/application.conf
+++ b/application.conf
@@ -20,7 +20,7 @@ akka {
             buffer-size = 4096
             classes = [
                 "ru.ifmo.genome.dna.Long1DNASeq",
-                "ru.ifmo.genome.ds.Messages$size$",
+                "ru.ifmo.genome.ds.Messages$size",
                 "ru.ifmo.genome.ds.Messages$update1",
                 "ru.ifmo.genome.data.FreqFilter$$anonfun$add$1$1$$anonfun$apply$1",
             ]
@@ -52,6 +52,6 @@ akka {
 }
 
 genome {
-    storageNodes = ["akka://default@127.0.0.1:2553", "akka://default@127.0.0.1:2553", "akka://default@127.0.0.1:2552", "akka://default@127.0.0.1:2552"]
+    storageNodes = ["akka://default@127.0.0.1:2553", "akka://default@127.0.0.1:2553", "akka://default@127.0.0.1:2553", "akka://default@127.0.0.1:2553"]
     chunkSize = 64
 }
