--- a/config/application.conf
+++ b/config/application.conf
@@ -4,21 +4,27 @@ akka {
     actor {
         provider = "akka.remote.RemoteActorRefProvider"
 
-        serialize-messages = on
+#        serialize-messages = on
 
         default-dispatcher {
             #executor = "thread-pool-executor"
-            throughput = 100
-            mailbox-capacity = 100
+            throughput = 500
+            mailbox-capacity = 1000
             mailbox-push-timeout-time = -1
         }
 
         kryo  {
             type = "nograph"
-            idstrategy = "default"
+            idstrategy = "incremental"
             serializer-pool-size = 32
             buffer-size = 4096
-            implicit-registration-logging = true
+            classes = [
+                "ru.ifmo.genome.dna.Long1DNASeq",
+                "ru.ifmo.genome.ds.Messages$size",
+                "ru.ifmo.genome.ds.Messages$apply",
+                "ru.ifmo.genome.ds.Messages$update1",
+                "ru.ifmo.genome.data.FreqFilter$$anonfun$add$1$1$$anonfun$apply$1",
+            ]
         }
 
         serializers {
@@ -37,9 +43,10 @@ akka {
     remote {
         transport = "akka.remote.netty.NettyRemoteTransport"
         netty {
-            hostname = "127.0.0.1"
             port = 2552
-            
+            backoff-timeout = 1000s
+            #max-channel-memory-size = 10MiB
+            max-total-memory-size = 256MiB
         }
     }
 }
@@ -48,14 +55,18 @@ genome {
     storageNodes = [
         "akka://default@192.168.0.10:2552",
         "akka://default@192.168.0.10:2552",
-        "akka://default@192.168.0.9:2552",
-        "akka://default@192.168.0.9:2552",
-        "akka://default@192.168.0.9:2552",
-        "akka://default@192.168.0.9:2552",
+        "akka://default@192.168.0.83:2552",
+        "akka://default@192.168.0.83:2552",
         "akka://default@192.168.0.89:2552",
         "akka://default@192.168.0.89:2552",
         "akka://default@192.168.0.86:2552",
         "akka://default@192.168.0.86:2552",
+        "akka://default@192.168.0.82:2552",
+        "akka://default@192.168.0.82:2552",
+        "akka://default@192.168.0.9:2552",
+        "akka://default@192.168.0.9:2552",
+        "akka://default@192.168.0.84:2552",
+        "akka://default@192.168.0.84:2552",
     ]
     inputFile = "data/ecoli"
     outputFile = "data/graph"
