--- a/config/application.conf
+++ b/config/application.conf
@@ -21,7 +21,6 @@ akka {
             classes = [
                 "ru.ifmo.genome.dna.Long1DNASeq",
                 "ru.ifmo.genome.ds.Messages$size",
-                "ru.ifmo.genome.ds.Messages$apply",
                 "ru.ifmo.genome.ds.Messages$update1",
                 "ru.ifmo.genome.data.FreqFilter$$anonfun$add$1$1$$anonfun$apply$1",
             ]
@@ -68,7 +67,13 @@ genome {
         "akka://default@192.168.0.84:2552",
         "akka://default@192.168.0.84:2552",
     ]
-    inputFile = "data/ecoli"
-    outputFile = "data/graph"
+#    inputFile = "data/ecoli"
+#    outputFile = "data/graph"
+    inputFile = "data/graph"
+    dataFile = "data/ecoli"
+    outputFile = "data/graphdesc"
+    graphFile = "data/graph1"
     chunkSize = 64
+    takeFirst = 8326576
+    cutoff = 200
 }
